# code-snippet-image-from-md-skill

./: .gitignore  README.md  SKILL.md  bootstrap.sh  install.md
.github/workflows/: release.yml
code2img/: Cargo.toml
code2img/src/: main.rs
md2img/: Cargo.toml
md2img/src/: main.rs
rust-src/: Cargo.toml
rust-src-table/src/: main.rs
scripts/: .gitignore
table2img/: Cargo.toml  assets
